# ChangeLog for app-admin/389-console
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  389-console-1.1.6.ebuild:
  fix #82 

*389-console-1.1.6

  01 Jun 2010; <slep@gentoo.org> +389-console-1.1.6.ebuild:
  new version

*389-console-1.1.5

  01 Jun 2010; <slep@gentoo.org> +389-console-1.1.5.ebuild:
  version bump

  04 Apr 2010; <slep@gentoo.org> 389-console-1.1.4_alpha1.ebuild:
  drop java flags and add die in more statment

  13 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-console-1.1.4_alpha1.ebuild:
  alpha version

*389-console-1.1.4_alpha1 (13 Mar 2010 )

  12 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-console-1.1.3.ebuild:
  rename ebuild in upstream

  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-idm-console-1.1.3-r1.ebuild:
  revision bump add eapi 2 support

  23 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
  389-idm-console-1.1.3.ebuild:
  add my mirror for the package

  23 Aug 2009; Mario Fetka <mario.fetka@gmail.com> ChangeLog:
  delete not needed files dir

  23 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
  389-idm-console-1.1.3.ebuild:
  correct localtion of java libs

  23 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
  389-idm-console-1.1.3.ebuild:
  correct typo

*389-idm-console-1.1.3 (23 Aug 2009)

  23 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
  -fedora-idm-console-1.1.1.ebuild, -fedora-idm-console-1.1.1-r1.ebuild,
  +389-idm-console-1.1.3.ebuild, -files/fedora-idm-console-cvs.sh:
  rename package to 389 brand

  07 Apr 2009; Mario Fetka <mario.fetka@gmail.com>
  +fedora-idm-console-1.1.3.ebuild:
  Bump upstream

  15 Sep 2008; Mario Fetka <mario.fetka@gmail.com>
  +fedora-idm-console-1.1.1-r1.ebuild:
  bump

  21 Aug 2008; Mario Fetka <mario.fetka@gmail.com>
  fedora-idm-console-1.1.1.ebuild:
  Repoman Cleanup

  19 Jan 2008; Mario Fetka <mario-fetka@gmx.at>
  fedora-idm-console-1.1.1.ebuild:
  correct typo
