@@ -1,6 +1,4 @@
-DIST 389-ds-console-1.2.0.tar.bz2 784763 RMD160 e9dca6b39fdec45f20e353edc99a0d048e522521 SHA1 403c493f69b94747ea9078799a1f871b71a71d73 SHA256 7db936ec197d066d286305d59294307242ab2786eb866d86411f5a64e04ab408
 DIST 389-ds-console-1.2.3.tar.bz2 786681 RMD160 4b6a496b38c661bdecffd8fc91b803cc2aa6e4fd SHA1 9d433a142a92c7b6a2cc46927dba4140da05810b SHA256 a866e4cbef6445d8540b250c0f4ea9617501f6ea1b9c183b4745455bb59eefed
-EBUILD 389-ds-console-1.2.0-r1.ebuild 2037 RMD160 5d2401fd48d747e76eab738a22829ef692037aab SHA1 26583504aa614f1c0797e23c1cdec946f69dae70 SHA256 cd59fa493f7011a9350d3c79ba1eeefe48db89d505aeb17e1da516981f7b40f8
 EBUILD 389-ds-console-1.2.3.ebuild 2037 RMD160 ae24a97ba150f4be7a0a6a713771c9d64015150b SHA1 bfea2fb1dc47e885745931e4ee29da6e3b5033e4 SHA256 bd393a95fdbc6dd47ca081c23d486636e7d56946152cbf1dcee0a374820be4e7
-MISC ChangeLog 2763 RMD160 a368076dd77f130502540792489d4ae1194dc6c0 SHA1 8d77f9e0654e0df3ae1fd43fd89ae6833d4e6860 SHA256 d08201e199b83e8d0f46e29e0f7de8d2be513dd10047ab14dd222cab49c8f973
+MISC ChangeLog 2872 RMD160 c449f23da60051254cbe1674553c8925276a597a SHA1 df0b10454aed34b23b74d2d63c67d6f46e31a54c SHA256 c819c489c146f5006c60a94bc90314722b87baa9e7845b1917cfc3e46ff026f6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
