@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -389-ds-console-1.2.0-r1.ebuild:
+  remove old ebuild
+
   07 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   389-ds-console-1.2.3.ebuild:
   fix install phase
