@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -389-console-1.1.3.ebuild, -389-console-1.1.4_alpha1.ebuild:
+  remove old ebuild
+
   07 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   389-console-1.1.6.ebuild:
   fix #82 
